# tts-podcast

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.omc/plans/: 2026-05-23-local-and-search-inputs.md  2026-05-23-style-and-angle-cli.md  2026-05-23-tts-podcast-mvp.md
src/tts_podcast/: __init__.py  audio_exporter.py  cli.py  cloak_fetcher.py  config.py  duo_generator.py  duos.py  link_extractor.py  link_follower.py  llm_summarizer.py  local_loader.py  models.py  report_generator.py  research.py  retry.py  style_presets.py  token_tracker.py  tts_generator.py  user_agent.py  web_scraper.py
tests/: conftest.py  test_cli.py  test_cloak_fetcher.py  test_duo_generator.py  test_duos.py  test_link_follower.py  test_llm_summarizer.py  test_local_loader.py  test_research.py  test_style_presets.py  test_tts_generator.py  test_web_scraper.py
tests/fixtures/: dialogue_prompt_no_overlay.txt  regen_dialogue_prompt.py
