[project]
name = "tts-podcast"
version = "0.2.0"
description = "Turn any web article into a two-voice podcast via Gemini TTS, with iterative Google Search enrichment."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Grégoire Compagnon", email = "obeone@obeone.org" },
]
license = "MIT"
dependencies = [
    "audioop-lts>=0.2.2",
    "click>=8.3.3",
    "coloredlogs>=15.0.1",
    "google-genai>=2.2",
    "pydub>=0.25.1",
    "pypdf>=4.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0",
    "tenacity>=9.1",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
# Stealth-browser fallback for pages that block plain HTTP scraping
# (Cloudflare, reCAPTCHA, etc.).  Pulls in a ~200 MB Chromium binary on first
# run.  Enable at runtime with `scraping.cloak_fallback: true`.
cloak = [
    "cloakbrowser>=0.3.31",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
tts-podcast = "tts_podcast.cli:cli"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
